fix image stretching on favor icons

--- a/src/shared/Shared.module.css
+++ b/src/shared/Shared.module.css
@@ -196,8 +196,10 @@
 
 .movefriend {
   text-align: right;
-  height: 60%;
-  background-size: 100% 100%;
+  height: 70%;
+  background-size: contain;
+  background-position: 50%;
+  background-repeat: no-repeat;
   aspect-ratio: 1;
 }
 
